# eda-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  run_ansible-test.py  run_ansible_test.py  setup.cfg
eda_hooks/: run_ansible_test.py
