[metadata]
name = eda_hooks
version = 1.0.0
description = Pre-commit hooks for Ansible EDA
url = https://github.com/ttuffin/eda-hooks
author = Thomas Tuffin
author_email = ttuffin@redhat.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    ansible-core>=2.13.3
python_requires = >=3.8

[options.entry_points]
console_scripts =
    run_ansible_test = eda_hooks.run_ansible_test:main

[bdist_wheel]
universal = True
